[project]
name = "rl-benchmark"
version = "0.1.0"
description = "Reward shaping and architecture ablations for a Gymnasium-based RL benchmark"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Esteban Montelongo", email = "emontel1@depaul.edu"},
  {name = "James Evarts", email = "jevarts@depaul.edu"},
  {name = "Abhaya Basnet", email = "abasnet@depaul.edu"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "gymnasium",
    "stable-baselines3",
    "torch",
    "torchvision",
    "numpy",
    "matplotlib",
    "optuna",
    "wandb",
    "pandas",
    "ipykernel",
    "jupyterlab",
    "notebook"
]

[build-system]
requires = [
  "setuptools>=65",
  "wheel>=0.40"
]
build-backend = "setuptools.build_meta"
